infra/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: beretedocker/shbooks/frontend
          resources:
            requests:
              cpu: 500m
              memory: 300Mi
            limits:
              cpu: '1'
              memory: 600Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      name: frontend-port
      targetPort: 3000
      protocol: TCP
