infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: shbooks.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip
                port:
                  name: auth-port
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip
                port:
                  name: frontend-port
